# spoor

./: .coverage  .gitignore  ADR.md  CLAUDE.md  README.md  architecture_decisions.md  docker-compose.yml  lodges1.txt  pyproject.toml
.claude/skills/assess/: SKILL.md
.claude/skills/build-pricing-script/: SKILL.md
.claude/skills/categorise/: SKILL.md
.claude/skills/collect/: SKILL.md
.claude/skills/collect/scripts/: booking_reviews.py  tripadvisor_reviews.py
.claude/skills/evaluate/: SKILL.md
.claude/skills/grill-me/: SKILL.md
.claude/skills/to-prd/: SKILL.md
config/: fx.json
data/categorised/: birding-specialist.md  budget-backpacker.md  citizen-scientist.md  corporate-incentive-group.md  eco-conscious-traveller.md  honeymoon-couple.md  multi-gen-family.md  returning-safari-devotee.md  school-student-group.md  social-media-influencer.md  solo-adventure-traveller.md  ultra-hnw-collector.md  wellness-retreat-guest.md  wildlife-photographer.md
data/evaluated/londolozi/: founders-camp-adr.json  founders-camp-pricing.py  founders-camp.md  pioneer-camp-adr.json  pioneer-camp-pricing.py  pioneer-camp.md  private-granite-suites-adr.json  private-granite-suites-pricing.py  private-granite-suites.md  tree-camp-adr.json  tree-camp-pricing.py  tree-camp.md  varty-camp-adr.json  varty-camp-pricing.py  varty-camp.md
data/evaluated/makanyi-lodge/: makanyi-private-game-lodge-adr.json  makanyi-private-game-lodge-pricing.py  makanyi-private-game-lodge.md
data/evaluated/tanda-tula/: safari-camp-adr.json  safari-camp-pricing.py  safari-camp.md
data/raw/babylonstoren/: babylonstoren.md
data/raw/babylonstoren/reviews/: babylonstoren-booking.jsonl  babylonstoren-tripadvisor.md
data/raw/boteti-safaris/: the-lodge.md
data/raw/boteti-safaris/reviews/: boteti-tented-safari-lodge-booking.jsonl  boteti-tented-safari-lodge-tripadvisor.md
data/raw/camissa-house/: camissa-house.md
data/raw/island-safari-lodge-maun/: island-safari-lodge.md
data/raw/londolozi/: founders-camp.md  pioneer-camp.md  private-granite-suites.md  tree-camp.md  varty-camp.md
data/raw/makanyi-lodge/: makanyi-private-game-lodge.md
data/raw/tanda-tula/: field-camp.md  nkarhi-homestead.md  safari-camp.md
data/raw/victoria-falls-river-lodge/: hippo-creek-luxury-villa.md  island-treehouse-suites.md  malachite-luxury-tented-suites.md  rapids-view-luxury-villa.md  victoria-falls-river-lodge.md
docs/: how_we_doc.md
docs/db-migration/: README.md  consolidation_plan.md
docs/db-migration/assets/: db_erd.html  db_flow.html  db_migration.html
issues/: categorise-prd.md  collect-prd.md  db-migration-prd.md  prd.md  reviews-prd.md
spike_db/: REPORT.md  __init__.py  categorise_db.py  db.py  docker-compose.yml  importer.py  schema.sql  store.py
spike_db/artifacts/: ddl_live.sql  erd.excalidraw  gen_erd.py
spike_db/tests/: _corpus.py  conftest.py  test_categorise_db.py  test_importer.py  test_spike.py  test_store.py
spoor/: __init__.py  benchmark.py  categories.py  cli.py  freshness.py  fx.py  manifest.py  pricing.py  report.py  reputation.py
spoor/db/: __init__.py  alembic.ini  categorise.py  connection.py  evaluate.py  importer.py  migrate.py  store.py
spoor/db/alembic/: env.py  script.py.mako
spoor/models/: __init__.py  category.py  evaluation.py  property.py
tests/: conftest.py  test_benchmark.py  test_categories.py  test_freshness_sync.py  test_golden_makanyi.py  test_golden_reputation.py  test_golden_tanda.py  test_manifest.py  test_report_reputation.py  test_reputation.py  test_tripadvisor_scraper.py
tests/db/: test_import.py  test_schema.py
(+20 files in other folders)
